# cpptemplate

./: .gitignore  CMakeLists.txt  README.md  launch.sh
bench/: CMakeLists.txt  bench_example.cpp  main.cpp
include/: example.h
lib/criterion/: criterion.hpp
src/: CMakeLists.txt  example.cpp  main.cpp
test/: CMakeLists.txt  test_example.cpp
